--- a/Week1_Intro/Dockerfile
+++ b/Week1_Intro/Dockerfile
@@ -2,9 +2,13 @@ FROM python:3.9.13
 
 RUN apt-get install wget
 RUN pip install --upgrade pip
-RUN pip install pandas
+RUN pip install pandas sqlalchemy psycopg2
 
 WORKDIR /app
-COPY pipeline.py pipeline.py
+COPY ingest_data.py ingest_data.py
 
-ENTRYPOINT [ "python", "pipeline.py"]
+ENTRYPOINT [ "python", "ingest_data.py"]
+
+# This dockerfile is used for running docker run command to run a docker container
+# and ingest data automatically.
+# Since I opt to ingest data in .ipynb notebook, this file is for reference purpose
